Fixed layout issue

--- a/classification-demo-server/classification-demo-web/src/main/ngapp/src/app/news-table/news-table.component.css
+++ b/classification-demo-server/classification-demo-web/src/main/ngapp/src/app/news-table/news-table.component.css
@@ -2,5 +2,5 @@
 .rediconcolor {color:indianred;}
 
 .newssites button {
-  margin: 8px;
+  margin: 16px;
 }
